crates/tui/tests/snapshots/snapshots__added_third_party.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&mut h.app, 100, 20)"
---
" omp-tui  1 Favorites (1)   2 Internet (3)   3 Partners (1)   4 Recent (0)    / search              "
"┌ Favorites ──────────────────────────────────────────────────────┐┌ Players (0) ──────────────────┐"
"│  server                                       players    ping   ││nobody online                  │"
"│▶ ★ ○ play.example.org:7777                        0/0       …   ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"└──────────────────────────────────────────────────────────── 1/1 ┘└───────────────────────────────┘"
"┌ Details ────────────────────────────────────────────────────────┐┌ Ping ─────────────────────────┐"
"│play.example.org:7777  127.0.0.1:7010                            ││                               │"
"│mode                                                             ││                               │"
"│language                                                         ││                               │"
"│players   0/0                                                    ││                               │"
"│version   ?                                                      ││                               │"
"└─────────────────────────────────────────────────────────────────┘└───────────────────────────────┘"
" added 127.0.0.1:7010 to favorites                                                                  "
