crates/tui/tests/snapshots/snapshots__confirm_remove.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&mut h.app, 100, 20)"
---
" omp-tui  1 Favorites (1)   2 Internet (3)   3 Partners (1)   4 Recent (0)    / search              "
"┌ Favorites ──────────────────────────────────────────────────────┐┌ Players (0) ──────────────────┐"
"│  server                                       players    ping   ││player list not available      │"
"│▶ ★ ◆ Alpha Freeroam                            12/100       …   ││(servers stop answering above  │"
"│                                                                 ││~100 players)                  │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                   ┌ Remove favorite ─────────────────────────────────────────┐                   │"
"│                   │Remove Alpha Freeroam (127.0.0.1:7001) from favorites?    │                   │"
"│                   │                                                          │                   │"
"│                   │y / Enter confirm   n / Esc cancel                        │                   │"
"└───────────────────│                                                          │───────────────────┘"
"┌ Details ──────────└──────────────────────────────────────────────────────────┘min 30 avg 38 max 6┐"
"│Alpha Freeroam  127.0.0.1:7001                                   ││      █                        │"
"│mode      Freeroam v2                                            ││      █                        │"
"│language  English                                                ││      █▄                       │"
"│players   12/100                                                 ││   ▆  ██                       │"
"│version   omp 1.5.8.3079  (open.mp)                              ││▆▁▇█▅▂██                       │"
"└─────────────────────────────────────────────────────────────────┘└───────────────────────────────┘"
" ★ Alpha Freeroam added to favorites                                                                "
