crates/tui/tests/snapshots/snapshots__favorites_empty.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&mut h.app, 100, 20)"
---
" omp-tui  1 Favorites (0)   2 Internet (3)   3 Partners (1)   4 Recent (0)    / search              "
"┌ Favorites ──────────────────────────────────────────────────────┐┌ Players ──────────────────────┐"
"│                        no favorites yet                         ││                               │"
"│      press F on a server to add it, or a to add by address      ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"└──────────────────────────────────────────────────────────── 0/0 ┘└───────────────────────────────┘"
"┌ Details ────────────────────────────────────────────────────────┐┌ Ping ─────────────────────────┐"
"│select a server                                                  ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"└─────────────────────────────────────────────────────────────────┘└───────────────────────────────┘"
" 3 servers loaded                                                                                   "
