crates/tui/tests/snapshots/snapshots__filters_popup.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&mut h.app, 100, 26)"
---
" omp-tui  1 Favorites (0)   2 Internet (3)   3 Partners (1)   4 Recent (0)    / search  [omp]       "
"┌ Internet ───────────────────────────────────────────────────────┐┌ Players (0) ──────────────────┐"
"│  server                                       players    ping   ││player list not available      │"
"│    ◆ Alpha Freeroam                            12/100    45ms   ││(servers stop answering above  │"
"│▶   ◆ Charlie Deathmatch                        55/100   120ms   ││~100 players)                  │"
"│                                                                 ││                               │"
"│                        ┌ Filters & sort ────────────────────────────────┐                        │"
"│                        │ [x] open.mp servers only                       │                        │"
"│                        │ [ ] hide empty servers                         │                        │"
"│                        │ [ ] hide passworded servers                    │                        │"
"│                        │ gamemode: (any)                                │                        │"
"│                        │ sort by: none                                  │                        │"
"│                        │ direction: descending                          │                        │"
"│                        │ versions                                       │                        │"
"└────────────────────────│ [ ] open.mp (2)                                │────────────────────────┘"
"┌ Details ───────────────│ [ ] 0.3.7 (1)                                  │20ms  min 120 avg 120 ma┐"
"│Charlie Deathmatch  127.│ languages                                      │                        │"
"│mode      Charlie Deathm│ [ ] English (3)                                │                        │"
"│language  English       │Space toggle  c clear  Esc close                │                        │"
"│players   55/100        └────────────────────────────────────────────────┘                        │"
"│version   omp 1.5.8.3079  (open.mp)                              ││█                              │"
"│ping      120ms                                                  ││█                              │"
"│                                                                 ││█                              │"
"│                                                                 ││█                              │"
"└─────────────────────────────────────────────────────────────────┘└───────────────────────────────┘"
" 3 servers loaded                                                                                   "
