crates/tui/tests/snapshots/snapshots__help.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&mut h.app, 100, 30)"
---
" omp-tui  1 Favorites (0)   2 Internet (3)   3 Partners (1)   4 Recent (0)    / search              "
"┌ Internet ───────────────────────────────────────────────────────┐┌ Players (3) ──────────────────┐"
"│  server     ┌ Keys ────────────────────────────────────────────────────────────────┐        score│"
"│▶   ◆ Alpha F│ 1-4 / Tab             switch list: favorites, internet, partners, rec│          123│"
"│    ○ Bravo R│ j/k ↑/↓ PgUp/PgDn g/G move                                           │           69│"
"│    ◆ Charlie│ Enter                 join the selected server                       │          420│"
"│             │ F / Space             add or remove favorite                         │             │"
"│             │ a                     add a server by address (also hostnames)       │             │"
"│             │ d / Del               remove from favorites or recent                │             │"
"│             │ J / K                 reorder favorites                              │             │"
"│             │ /                     search (Esc clears)                            │             │"
"│             │ f                     filters and sort menu                          │             │"
"│             │ o / e / n             toggle: open.mp only, hide empty, hide password│             │"
"│             │ s / S                 cycle sort key / flip direction                │             │"
"│             │ r / R                 refresh master list / re-query servers         │             │"
"│             │ c                     copy address to clipboard                      │             │"
"│             │ w / D                 open the server's website / Discord            │             │"
"└─────────────│ p                     per-server nickname, password, SA-MP version   │─────────────┘"
"┌ Details ────│ x                     clear recently joined                          │ avg 38 max 6┐"
"│Alpha Freeroa│ l                     show the last launch log                       │             │"
"│mode      Fre│ i                     import client files from a launcher data folder│             │"
"│language  Eng│ ,                     settings                                       │             │"
"│players   12/│ q                     quit                                           │             │"
"│version   omp│                                                                      │             │"
"│ping      45m│ ◆ open.mp server   ○ SA-MP server   ★ favorite   🔒 password         │             │" Hidden by multi-width symbols: [(66, " ")]
"│website   htt│ mouse: click selects, double-click joins, wheel scrolls, links open  │             │"
"│discord   htt└──────────────────────────────────────────────────────────────────────┘             │"
"│rules     mapname=San Andreas  weather=10                        ││█▂███▄██                       │"
"└─────────────────────────────────────────────────────────────────┘└───────────────────────────────┘"
" 3 servers loaded                                                                                   "
